--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dogood">
+    package="com.example.dogood" >
 
     <application
         android:name=".Myapp"
@@ -9,10 +9,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DoGood">
+        android:theme="@style/Theme.DoGood" >
+        <activity android:name=".activities.Activity_profile" >
+        </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,8 +24,6 @@
         <activity
             android:name=".activities.NewGiveItemActivity"
             android:screenOrientation="portrait" />
-
-
     </application>
 
 </manifest>
