--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 }
