--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 dependencies {
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:26.0.0')
+    implementation 'com.google.firebase:firebase-firestore:22.0.0'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
 
