--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity
             android:name=".activities.NewGiveItemActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.NewAskItemActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
