--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     implementation 'com.github.AraujoJordan:ExcuseMe:0.9.5'
     implementation 'com.karumi:dexter:6.2.1'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 
 
 }
