--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,6 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.1'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 
+    implementation "com.airbnb.android:lottie:3.4.4"
 
 }
