finish profile update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,10 @@
 
         </activity>
 
+
+        <activity
+            android:name=".activities.Activity_updateAccount"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.NewGiveItemActivity"
             android:screenOrientation="portrait" />
