--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,9 @@
         <activity
             android:name=".activities.ItemDetailsActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".activities.EditItemActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
