--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
 
 
         <activity
-            android:name=".activities.Activity_updateAccount"
+            android:name=".Dialogs.UpdateAccountDialog"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.NewGiveItemActivity"
