add rate from guy

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,7 @@ dependencies {
 
     implementation 'com.bogdwellers:pinchtozoom:0.1'
 
+    implementation 'com.github.guy-4444:SmartRateUsDialog-Android:1.00.08'
+
 
 }
